--- a/app/assets/stylesheets/vars/_base.scss
+++ b/app/assets/stylesheets/vars/_base.scss
@@ -304,15 +304,6 @@ $pager-active-color: $pagination-active-color;
 $pager-disabled-color: $pagination-disabled-color;
 
 
-// Jumbotron
-
-$jumbotron-padding:       30px;
-$jumbotron-color:         $black;
-$jumbotron-bg:            $body-bg;
-$jumbotron-heading-color: inherit;
-$jumbotron-font-size:     48px;
-
-
 // Form states and alerts
 
 $state-success-text:   $green;
